[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/GameOverScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/pixel_operator/PixelOperator.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/menu/game_over/retry_btn.png" type="Texture" id=3]
[ext_resource path="res://assets/menu/game_over/main_menu_btn.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="GameOverScreen" type="Control"]
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = -40.0
margin_right = 62.0
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLbl" type="Label" parent="Menu"]
margin_right = 124.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_top = 36.0
margin_right = 124.0
margin_bottom = 96.0
rect_min_size = Vector2( 120, 60 )
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/HBoxContainer"]
margin_left = 14.0
margin_right = 109.0
margin_bottom = 60.0
focus_neighbour_top = NodePath("MainMenuBtn")
focus_neighbour_bottom = NodePath("RetryBtn")
alignment = 1

[node name="RetryBtn" type="Button" parent="Menu/HBoxContainer/Buttons"]
margin_top = 2.0
margin_right = 95.0
margin_bottom = 28.0
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuBtn" type="Button" parent="Menu/HBoxContainer/Buttons"]
margin_top = 32.0
margin_right = 95.0
margin_bottom = 58.0
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Menu/HBoxContainer/Buttons/RetryBtn" to="." method="_on_RetryBtn_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/Buttons/MainMenuBtn" to="." method="_on_MainMenuBtn_pressed"]
